--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   latlong2: ^0.9.0
   supabase_flutter: ^2.8.4
   lucide_icons: ^0.257.0
+  google_maps_flutter: ^2.5.0
+  geocoding: ^2.1.0
+  geolocator: ^11.0.0
 
 
 dev_dependencies:
