--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,8 @@ dependencies:
   google_maps_flutter: ^2.5.0
   geocoding: ^2.1.0
   geolocator: ^11.0.0
-  intl: ^0.18.0
-
+  intl: ^0.19.0
+  device_preview: ^1.1.0
 
 dev_dependencies:
   flutter_test:
