--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   geolocator: ^11.0.0
   intl: ^0.19.0
   device_preview: ^1.1.0
+  timezone: ^0.9.0
 
 dev_dependencies:
   flutter_test:
